--- a/AppRiesgosPersonales/app/src/main/res/values/strings.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/strings.xml
@@ -39,7 +39,32 @@
     <string name="severity_medium">MEDIUM</string>
     <string name="severity_high">HIGH</string>
     <string name="severity_critical">CRITICAL</string>
+    <string name="cve_baseScore_title">Gravedad</string>
+    <string name="cve_confidencialidad_title">Confidencialidad</string>
+    <string name="cve_integridad_title">Integridad</string>
+    <string name="cve_disponibilidad_title">Disponibilidad</string>
+    <string name="cve_impacto_title">Impacto</string>
+    <string name="cve_info_impacto">
+    <![CDATA[
+        <b>1. Confidencialidad:</b><br>
+        ¿Qué significa? La confidencialidad se refiere a la capacidad de mantener la información protegida y accesible solo a las personas o sistemas autorizados. Si un dispositivo o sistema es confidencial, significa que la información que contiene no puede ser vista ni utilizada por personas no autorizadas.<br><br>
+        Ejemplo en un dispositivo IoT: Imagina que tienes una cámara de seguridad en tu hogar. Si esta cámara tiene una alta confidencialidad, significa que las imágenes y videos que captura solo pueden ser vistos por ti y las personas a las que autorices, y no pueden ser accedidos por extraños.<br><br>
 
+        <b>2. Integridad:</b><br>
+        ¿Qué significa? La integridad se refiere a la precisión y exactitud de la información almacenada o transmitida por un dispositivo o sistema. Si un dispositivo tiene alta integridad, significa que la información no ha sido alterada ni modificada de manera no autorizada.<br><br>
+        Ejemplo en un dispositivo IoT: Si tienes un termostato inteligente que controla la temperatura de tu hogar, la integridad asegura que los comandos que envías al termostato no sean alterados en el camino. Esto significa que la temperatura que configuras es la que realmente se establece.<br><br>
 
+        <b>3. Disponibilidad:</b><br>
+        ¿Qué significa? La disponibilidad se refiere a la capacidad de un dispositivo o sistema para estar operativo y accesible cuando se necesita. Si un dispositivo tiene alta disponibilidad, significa que está listo y funcionando cuando lo necesitas, sin interrupciones.<br><br>
+        Ejemplo en un dispositivo IoT: Si tienes cerraduras inteligentes en tu casa, es importante que estén siempre disponibles. Imagina que estás llegando a casa y quieres desbloquear la puerta con tu teléfono. La disponibilidad asegura que la cerradura responda rápidamente y sin problemas.<br><br>
+
+        Las etiquetas que verás junto a estas características tienen el siguiente significado:<br><br>
+        1. <b>NONE:</b> Esto indica que no hay impacto.<br>
+        2. <b>LOW:</b> Indica un impacto bajo, es decir, el impacto es menor y no representa una amenaza seria.<br>
+        3. <b>PARTIAL:</b> Indica un impacto parcial, esto significa que hay un impacto significativo, pero no es completo.<br>
+        4. <b>HIGH:</b> Indica un impacto alto, esto significa que el impacto es grave y puede tener consecuencias serias.<br>
+        5. <b>COMPLETE:</b> Indica un impacto completo, esto significa que el impacto es total y puede tener consecuencias catastróficas.
+    ]]>
+    </string>
 
 </resources>
